src/sass/layout/_navigation.scss
.nav {
    &__items {
        width: 100%;

        &__link {
            color: $nav-text-color;
            text-decoration: none !important;
            width: fit-content;
    
            &:hover {
                color: $nav-hover-color;
            }
        }
    }

    &__small {
        &__checkbox {
            display: none;
        }

        &__menu {
            height: 100vh;
            width: 100%;
            position: fixed;
            top: 0;
            left: 0;
            z-index: 1500;
            opacity: 0;
            width: 0;
            pointer-events: none;
            transition: all .6s cubic-bezier(.68, -0.55, 0.265, 1.55);

            &__list {
                position: absolute;
                top: 50%;
                left: 50%;
                transform: translate(-50%,-50%);
                list-style: none;
                text-align: center;
    
                &__item {
                    &:link,
                    &:visited {
                        display: block;
                        font-size: 3rem;
                        font-weight: 300;
                        padding: 1rem 2rem;
                        color: $color-black;
                        text-decoration: none;
                        text-transform: uppercase;
                        background-image: linear-gradient(120deg, transparent 0%, transparent 50%, $color-black 50%);
                        background-size: 230%;
                        transition: all .4s;
                    }

                    &:hover {
                        background-position: 100%;
                        color: $color-white;
                    }
                }
            }
        }
    
        &__button {
            background-color: rgba(246,247,235, .6);
            height: 2.5rem;
            width: 2.5rem;
            position: fixed;
            top: 1rem;
            right: 1rem;
            border-radius: 50%;
            z-index: 2000;
            box-shadow: 0 1rem 3rem rgba($color-black, .1);
            text-align: center;
            cursor: pointer;
        }
    
        &__background {
            height: 2.5rem;
            width: 2.5rem;
            border-radius: 50%;
            position: fixed;
            top: 1rem;
            right: 1rem;
            background-image: radial-gradient(rgba(246,247,235, .6), rgba(246,247,235, 1));
            z-index: 10;
            transition: transform .6s cubic-bezier(0.86, 0, .07, 1);
        }
    
        //FUNCTIONALITY
        &__checkbox:checked ~ &__background {
            transform: scale(75);
        }
    
        &__checkbox:checked ~ &__menu {
            opacity: 1;
            width: 100%;
            pointer-events: all;
        }
    
        //ICON
        &__icon {
            position: relative;
            margin-top: 1.2rem;
    
            &,
            &::before,
            &::after {
                width: 1rem;
                height: 2px;
                background-color: $color-light-grey2;
                display: inline-block;
            }    
    
            &::before,
            &::after {
                content: "";
                position: absolute;
                left: 0;
                transition: all .2s;
            }
    
            &::before {
                top: -.4rem;
            }
    
            &::after {
                top: .4rem;
            }
        }
    
        &__button:hover &__icon::before {
            top: -.5rem;
        }
    
        &__button:hover &__icon::after {
            top: .5rem;
        }
    
        &__checkbox:checked + &__button &__icon {
            background: transparent;
        }
    
        &__checkbox:checked + &__button &__icon::before {
            top: 0;
            transform: rotate(135deg);
        }
    
        &__checkbox:checked + &__button &__icon::after {
            top: 0;
            transform: rotate(-135deg);
        }
    }
}

